5231.	[protocol]	Add support for displaying CLIENT-TAG and SERVER-TAG.
			[GL #960]

5229.	[protocol]	Enforce known SSHFP fingerprint lengths. [GL #852]

5228.	[cleanup]	If trusted-keys and managed-keys are configured
			simultaneously for the same name, the key cannot
			be rolled automatically. This configuration now
			logs a warning. [GL #868]

5224.	[bug]		Only test provide-ixfr on TCP streams. [GL #991]

5222.	[bug]		'delv -t ANY' could leak memory. [GL #983]

5221.	[test]		Enable parallel execution of system tests on
			Windows. [GL !4101]

5218.	[bug]		Conditionally include <dlfcn.h>. [GL #995]

5214.	[bug]		win32: named now removes its lock file upon shutdown.
			[GL #979]

5213.	[bug]		win32: Eliminated a race which allowed named.exe running
			as a service to be killed prematurely during shutdown.
			[GL #978]

5210.	[bug]		When dnstap is enabled and recursion is not
			available, incoming queries are now logged
			as "auth". Previously, this depended on whether
			recursion was requested by the client, not on
			whether recursion was available. [GL #963]

5209.	[bug]		When update-check-ksk is true, add_sigs was not
			considering offline keys, leaving record sets signed
			with the incorrect type key. [GL #763]

5208.	[test]		Run valid rdata wire encodings through totext+fromtext
			and tofmttext+fromtext methods to check these methods.
			[GL #899]

5207.	[test]		Check delv and dig TTL values. [GL #965]

5205.	[bug]		Enforce that a DS hash exists. [GL #899]

5204.	[test]		Check that dns_rdata_fromtext() produces a record that
			will be accepted by dns_rdata_fromwire(). [GL #852]

5203.	[bug]		Enforce whether key rdata exists or not in KEY,
			DNSKEY, CDNSKEY and RKEY. [GL #899]

5200.	[security]	tcp-clients settings could be exceeded in some cases,
			which could lead to exhaustion of file descriptors.
			(CVE-2018-5743) [GL #615]

5197.	[bug]		dig could die in best effort mode on multiple SIG(0)
			records. Similarly on multiple OPT and multiple TSIG